      anonymous directory connection.  Instead, we track the link
      internally and transfer the data in-process.  This saves two
      sockets per anonymous directory connection (at the client and at
      the server), and avoids the nasty Windows socketpair() workaround.
    - Keep unused 4k buffers on a free list, rather than wasting 8k for every
      single inactive connection_t.

  o Minor features (build):
    - Make autoconf search for libevent, openssl, and zlib consistently.
    - Update deprecated macros in configure.in
    - When warning about missing headers, tell the user to let us
      know if the compile succeeds anyway, so we can downgrade the
      warning.
    - Include the current subversion revision as part of the version
      string: either fetch it directly if we're in an SVN checkout, do
      some magic to guess it if we're in an SVK checkout, or use
      the last-detected version if we're building from a .tar.gz.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.
    - When logging memory usage, break down memory used in buffers by
      buffer type.

  o Minor features (directory system):
    - Directory authorities accept and serve "extra info" documents for
      routers.  These documents contain fields from router descriptors that
      aren't usually needed, and that use a lot of excess bandwidth. Once
      these fields are removed from router descriptors, the bandwidth savings
      should be about 60%.  (Limitation: servers do not yet upload extra-info
      documents.)  [Partially implements proposal 104.]
    - Directory authorities allow multiple router descriptors and/or extra
      info documents to be uploaded in a single go.  This will make
      implementing proposal 104 simpler.